# Colour-in-Fard

./: .gitignore  BENCHMARKS.md  CLAIM-SPEC.md  CONFORMANCE.md  EMBEDDING.md  README.md  ROADMAP-V4.md  SPEC-2.0.md  SPEC-EMOLEX-1.0.md  SPEC.md  fard.toml
apps/: bench_registry_lite.fard  build_registry.fard  build_registry_v2.fard  build_search_index.fard  catalogue.fard  claim.fard  cmyk.fard  colorbrain.fard  contrast.fard  dynamic_theme.fard  emotion_palette.fard  enumerate_k5_simplex.fard  full_spectrum.fard  gradient.fard  hct.fard  hct_palette.fard  icc_cmyk.fard  icc_convert.fard  icc_info.fard  k_cube_palette_grid.fard  k_hue_report_simplex.fard  k_hue_strip_cube.fard  k_hue_swatches_simplex.fard  k_palette_grid.fard  lookup.fard  multi_illuminant.fard  naming.fard  palette.fard  pigments.fard  png_embed.fard  quantize_demo.fard  query.fard  registry.fard  relations.fard  similar.fard  simulate.fard  spectral.fard  spectral2.fard  theme_claims.fard  theme_export.fard  (+1 more)
cfid_cpp/: .gitignore  CMakeLists.txt  README.md
cfid_cpp/include/cfcolor/: cfid.hpp
cfid_cpp/src/: main.cpp
cfid_cpp/test/: test_cfid.cpp
cfid_go/: .gitignore  README.md  cfid.go  cfid_test.go  go.mod
cfid_kotlin/: README.md
cfid_py/: README.md  pyproject.toml
cfid_py/cfid/: __init__.py  __main__.py  cfid.py
cfid_py/cfid.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
cfid_py/tests/: probe_round3_neg.fard  test_cfid.py
cfid_rs/: Cargo.toml  README.md
cfid_rs/src/: lib.rs  main.rs  sha256.rs
cfid_swift/: Package.swift  README.md
cfid_ts/: README.md  bin.mjs  package-lock.json  package.json  tsconfig.json
cfid_wasm/: Cargo.toml  README.md  test_wasm.mjs
cfid_wasm/src/: lib.rs
conformance/: vectors.json
docs/: colorbrain_receipt_7b3f00.json  index.html  viewer.html
figma-plugin/: README.md  code.js  manifest.json  ui.html
names/: README.md  cf-anchors-1.0.0.ndjson  cf-pigments-1.0.0.ndjson
receipts/: sha256_1273cd88f14e4fd64a0d7ede2eaa01133cd6a7c5dc5503060ac5a51904b1efb9.json  sha256_4e05f6cef55d27986788d21662aee6491ac7f3e505042854459668da2b30f02c.json  sha256_4fa217b6add2e68078aaeb04205f64eeed3ef89d135f1a2842058ac073ea771c.json  sha256_591887f82044a43bed359b1e3d27a073d2d26a734f7a5ddece393e9174b7179f.json  sha256_5eae8f321e82dbf6d1b8b2d5f4c295c518ebad709ae3c87d3202d51bd1476ea3.json  sha256_62bd68ff5dad4c35476301b313a475cf7ec71a8235bde8a9a1b18ed49d03058d.json  sha256_a12d920e6e3ccf69f6fdd07d6eaf3043175e2671b19736b5238126a2ac0da5cb.json  sha256_adbdca8095c8909cfafc3f76ea2b663f0040dc9c8dc0dda596c13bba233a6da2.json  sha256_b8041f11cc74e2fecb19cdc21a53638636646794241ba248162ec27781450afe.json  sha256_ebb053a4fdb185836743c053c00007d8c62b321354d1f03cd9f065249c431eda.json  sha256_fe95e29b5ed9d6f59286e09ac330846ff1d1dbed7b1a033e9cd77f154e86c7df.json
release/: explain_7b3f00.json  palette_K10.css  palette_K10.json  palette_K10.receipt.json  spectrum_K20.ppm
tests/: corpus_css.fard  smoke_loop.fard  test_bmp_read.fard  test_cam16.fard  (+42 more)
(+14201 files in other folders)
