[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cfcolor"
version = "1.0.0"
description = "CF Colour Protocol -- deterministic colour identity"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
keywords = ["colour", "color", "identity", "perceptual", "CF-ID"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics",
]

[project.urls]
Homepage = "https://github.com/mauludsadiq/Colour-in-Fard"
Specification = "https://github.com/mauludsadiq/Colour-in-Fard/blob/main/SPEC.md"
Registry = "https://mauludsadiq.github.io/Colour-in-Fard/registry/index.json"

[project.scripts]
cfid = "cfcolor.__main__:main"

[tool.setuptools.packages.find]
include = ["cfcolor*"]
