[package]
name = "cfcolor-wasm"
version = "1.0.0"
edition = "2021"
description = "WebAssembly bindings for cfcolor (CF-ID, CF-Protocol-2.0.0)."
license = "MIT"
repository = "https://github.com/mauludsadiq/Colour-in-Fard"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfcolor = { path = "../cfid_rs" }
wasm-bindgen = "0.2"

[profile.release]
opt-level = "z"
lto = true
